	display : optimized "find references" (#9504)
	display : optimized "server/invalidate" requests (#9509)
	analyzer : fixed compiler crash upon handling code branches with enums with optional arguments (#9591)
	jvm : added "--java-lib-extern" to use jar files as externs without adding them to the compiled project (#9515)
	macro : fixed type intersection syntax in macro reification (#9404)
	lua : fixed lua code generation without `--main` compilation argument (#9489)
	php : added an overload signature for `session_set_cookie_params` function (#9507)
	nullsafety : fixed various scenarios of `if..else` branching (#9474)

2020-22-05 4.1.1

	New features:

	jvm : added `--jvm path/to.jar` CLI argument

	Bugfixes:

	all : fixed arguments ordering for @:structInit constructors (#9418)
	all : fixed display/references completion server request for static fields (#9440)
	all : fixed "Module not found" error reporting during macro execution in display requests (#9449)
	all : fixed module name completion for target-specific modules like `Mod.js.hx` (#9423)
	all : fixed completion for packages named "function" (#7697)
	all : fixed recursive typedefs with optional arguments in `@:overload` functions (#9455)
	cpp : fixed StringTools.endsWith() for unicode characters (#8980)
	cpp : fixed broken externs in `cpp` package (#9452)
	js/cpp : fixed catch var naming collision (#9413)
	interp : fixed throwing `haxe.macro.Error` outside of a macro context (#9390)
	lua : fixed lua.PairTools.ipairsMap method
	php : fixed an edge case in String methods generation (#9464)

2020-05-13: 4.1.0

	New features:

	all : added tail recursion elimination (#8908)
	all : added unified exception handling (#9124)
	all : allow `try {} catch(e) {}` as a shortcut for `try {} catch(e:haxe.Exception) {}` (#9269)
	eval : added SSL support (#9009)
	jvm : the JVM target is no longer considered experimental

	General improvements:

	all : implemented different display support approach (#8962)