@@ -44,6 +44,8 @@ let key_file = hash "file"
 let key_len = hash "len"
 let key_message = hash "message"
 let key_exception_message = hash "__exceptionMessage"
+let key_native_exception = hash "__nativeException"
+let key_native_stack = hash "__nativeStack"
 let key_Array = hash "Array"
 let key_eval_Vector = hash "eval.Vector"
 let key_String = hash "String"
